src/tools/androiddeployqt/main.cpp
@@ -1142,7 +1142,7 @@ bool copyAndroidExtraLibs(Options *options)
         return true;
 
     if (options->verbose)
-        fprintf(stdout, "Copying %zd external libraries to package.\n", qsizetype(options->extraLibs.size()));
+        fprintf(stdout, "Copying %zd external libraries to package.\n", size_t(options->extraLibs.size()));
 
     for (const QString &extraLib : options->extraLibs) {
         QFileInfo extraLibInfo(extraLib);
@@ -2095,10 +2095,10 @@ bool copyQtFiles(Options *options)
     if (options->verbose) {
         switch (options->deploymentMechanism) {
         case Options::Bundled:
-            fprintf(stdout, "Copying %zd dependencies from Qt into package.\n", options->qtDependencies.size());
+            fprintf(stdout, "Copying %zd dependencies from Qt into package.\n", size_t(options->qtDependencies.size()));
             break;
         case Options::Ministro:
-            fprintf(stdout, "Setting %zd dependencies from Qt in package.\n", options->qtDependencies.size());
+            fprintf(stdout, "Setting %zd dependencies from Qt in package.\n", size_t(options->qtDependencies.size()));
             break;
         };
     }
